01 - OpenCRVS Documentation/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md
---
title: "4.2.6 Configure certificate templates"
source_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates"
markdown_url: "https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md"
version: "v1.4"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:f09d3b65cac739383082aa0027d973ff6e3c49dc6b5f19589445120f9d269adb"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md).

# 4.2.6 Configure certificate templates

{% hint style="info" %}
**Designed your certificate template?**\
Once you have designed your certificate templates you are ready to configure the SVG. Please refer to our guidance on designing a certificate here: [3.5 Designing a certificate template](/v1.4/setup/2.-gather-requirements/3.5-designing-a-certificate-template.md)
{% endhint %}

### Step 1. Configuring certificate SVG file

The next step is for you to design and configure your certificate template [SVG](https://en.wikipedia.org/wiki/SVG) files.  Your certificates will be different [SVG](https://en.wikipedia.org/wiki/SVG) files for each vital event.  You use **{{** [**handlebar**](https://handlebarsjs.com/) **}}** syntax to mark where in the SVG you wish the citizen data to be rendered.  To get an idea of what we mean, take a look at the Farajaland example certificates and available handlebars for each event:

| Event    | Certificate template SVG | Available handlebars                                                                                                                       |
| -------- | ------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------ |
| Birth    | Birth Certificate        | [Default birth handlebars](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/form/birth/certificate-handlebars.ts)       |
| Death    | Death Certificate        | [Default death handlebars](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/form/death/certficate-handlebars.ts)        |
| Marriage | Marriage Certificate     | [Default marriage handlebars](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/form/marriage/certificate-handlebars.ts) |

We have supplied helper handlebars for all use cases. Some need explanation, or if you feel that you do not have a handlebar for your specific needs, please discuss with us on [Github](https://github.com/opencrvs/opencrvs-core/discussions) or email us at <team@opencrvs.org> and we can work on a new handlebar for you.  \
\
As an example of a handlebar that needs explanation: `{{placeOfBirth}}` is used if a user selects a pre-loaded [health facility](/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.3-set-up-cr-offices-and-health-facilities/3.2.3.2-prepare-source-file-for-health-facilities.md). This handlebar dynamically returns the location hierarchy, e.g. "district, state" to render based on the location of the [health facility](/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.3-set-up-cr-offices-and-health-facilities/3.2.3.2-prepare-source-file-for-health-facilities.md). You can see that in our place of birth location in the SVG, we have if/else logic to handle whatever the user chooses to enter into the form.\
\
It is possible to make custom form fields and when you do, custom handlebars are automatically created. Here is an example of a [custom form field handlebar](https://github.com/opencrvs/opencrvs-countryconfig/blob/551e864ab59d59ae2e65eec8d1d0d9651ae0a3d7/src/form/custom-fields.ts#L29)\
\
Open the SVG in a text editor tool such as Visual Studio Code. Replace the dummy text you added with the required handlebar.\
\
Example:\
`<text fill="#222222" xml:space="preserve" style="white-space: pre" font-family="Noto Sans-Bold" font-size="16" font-weight="bold" letter-spacing="0px"><tspan x="86.6699" y="444.268">{{eventDate}}&#10;</tspan></text>`\\

{% hint style="info" %}
Watching the videos below will really help you understand how to configure the certificate.  The time spent watching the video will make your life much easier!
{% endhint %}

{% embed url="<https://youtu.be/Oh5sDYK4GNo>" %}

### **Step 2: Add custom font files**

Drop your custom font file (.ttf) in this directory: <https://github.com/opencrvs/opencrvs-countryconfig/tree/develop/src/api/fonts>\
\
Then add an entry regarding your new font similar to the "NotoSans" ones here: <https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/certificate-configuration/handler.ts#L27-L34>For example, if we wanted to add the Merriweather font it would look something like this:

```
    fonts: {
      ['Noto Sans']: {
        normal: `${COUNTRY_CONFIG_URL}/fonts/NotoSans-Regular.ttf`,
        bold: `${COUNTRY_CONFIG_URL}/fonts/NotoSans-SemiBold.ttf`,
        italics: `${COUNTRY_CONFIG_URL}/fonts/NotoSans-Regular.ttf`,
        bolditalics: `${COUNTRY_CONFIG_URL}/fonts/NotoSans-Regular.ttf`
      },
      ['Merriweather']: {
        normal: `${COUNTRY_CONFIG_URL}/fonts/Merriweather-Regular.ttf`,
        bold: `${COUNTRY_CONFIG_URL}/fonts/Merriweather-Black.ttf`,
        italics: `${COUNTRY_CONFIG_URL}/fonts/Merriweather-Regular.ttf`,
        bolditalics: `${COUNTRY_CONFIG_URL}/fonts/Merriweather-Regular.ttf`
      }
    }
```

This would require the "Merriweather-Regular.ttf" & "Merriweather-Black.ttf" file to be available in the directory mentioned above.

### **Step 3. Seed, or upload and preview**

When you are ready to seed your database in [step 3.2.8](/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.8-seeding-your-local-database.md), these certificates will be uploaded.  Alternatively, a National System Admin user can upload the certificate template at any time in the functional configuration UI. You can preview the certificate to check that the some handlebar data is loading as intended.&#x20;

###


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.4/setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
